Resolve overflow problems with long displayed strings

--- a/static/style.css
+++ b/static/style.css
@@ -32,6 +32,7 @@ h1 {
     margin-top: 20px;
     width: 383px;
     border: 1px solid #cccccc;
+    overflow: hidden;
     padding: 7px;
     color: #808080;
     font-size: 28px;
